<resources>
    <string name="app_name">Air Printer</string>
    <string name="others">Others</string>
    <string name="tap_to_connect">Tap to Connect</string>
    <string name="info_text">Please make sure your phone and\nprinter are connected to same\nWifi-Network.</string>
    <string name="connect">Connect</string>
    <string name="clipboard">Clipboard</string>
    <string name="photos">Photos</string>
    <string name="document">Document</string>
    <string name="webpage">Webpage</string>
    <string name="connect_printer">Connect Printer</string>
    <string name="scanning">Scanning.....</string>
    <string name="sure">Make Sure your printer and mobile\nare on the same Wi-fi.</string>
    <string name="connected_to">Connected to</string>
    <string name="guide_tv">Tap “ Setup Guide” to set up your new\nprinter.</string>
    <string name="setup_guide">Setup Guide</string>
    <string name="no_printer_found">No Printer Found!</string>
    <string name="help_centre">Help Centre</string>
    <string name="cont">Continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_first">Check First</string>
    <string name="tv_help_first">Have both your phone and printer connected on\nthe same wifi network</string>
    <string name="global_settings">Global Settings</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="test_print">Test Print</string>
    <string name="second_tv">Back to mobile print, scan and connect with your\nprinter.\nNow you’re already set, you can print everything\nfrom your phone.</string>
    <string name="sample_document">Sample Document</string>
    <string name="pdf_document_22_kb">PDF Document 22 KB</string>
    <string name="_1_page">1 Page</string>
    <string name="printer">Printer</string>
    <string name="no_printer_selected">No Printer selected</string>
    <string name="copies">Copies</string>
    <string name="paper_size">Paper Size</string>
    <string name="a4">A4</string>
    <string name="layout">Layout</string>
    <string name="pages_per_sheet">Pages Per Sheet</string>
    <string name="_1">1</string>
    <string name="double_thin_line">Double Thin Line</string>
    <string name="done">Done</string>
    <string name="photo_editor">Photo Editor</string>
    <string name="print">Print</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="email">Email</string>
    <string name="enter_your_text_here">Enter your text here..</string>
    <string name="prepare_pages">Preparing pages…</string>
    <string name="preparing_printer">Preparing Printer</string>
    <string name="edit_photo">Edit photo</string>
    <string name="printer_complete">Printer complete</string>
    <string name="printer_fail">Printer fail</string>
    <string name="printer_cancel">Printer cancel</string>
    <string name="data_detector">Data Detector</string>
    <string name="qr_code">QR Code</string>
    <string name="bar_code">Bar Code</string>
    <string name="text_in_image">Text In Image</string>
    <string name="scan_documents">Scan Documents</string>
    <string name="scan">Scan</string>
    <string name="failed_to_crop_image">Failed to crop image</string>
    <string name="text_extration">Text extraction....</string>
    <string name="scanner_tools">Scanner Tools</string>
    <string name="recently_scan">Recently Scan</string>
    <string name="action_ad_text">Loading Ad…</string>
    <string name="see_all"><u>See all</u></string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="no_text_to_copy">No text to copy</string>
    <string name="history">History</string>
    <string name="delete_your_all_history_successfully">Delete your all history successfully</string>
    <string name="clear_all">Clear All</string>
    <string name="fetch_settings">Fetch settings…</string>
    <string name="update">Update</string>
    <string name="update_available">App Locker Update</string>
    <string name="new_version_of_the_app_">To use this app,download the latest version</string>
    <string name="consent_fetching">Consent fetching…</string>
    <string name="loading_ad">loading Ad…</string>
    <string name="skip">Skip</string>
    <string name="print_anywhere_any_thing">Print anywhere\nany thing</string>
    <string name="_01">01:</string>
    <string name="ans1">Let’s make print media clear and simple, print\nfrom your phone on any printer around you</string>
    <string name="_02">02:</string>
    <string name="ans2"><![CDATA[Quick Scan documents using camera & Print with a\nsingle tap]]></string>
    <string name="how_to_use">How to use App?</string>

    <string name="step_01">Step 01:</string>
    <string name="step_02">Step 02:</string>
    <string name="step_03">Step 03:</string>

    <string name="step_01_ans">Have both your phone and printer connected on\nthe same wifi network</string>
    <string name="step_02_ans">Get print service installed on your phone, open the\napp and agree with term and conditions.</string>
    <string name="step_03_ans">Back to mobile print, scan and connect with your\nprinter. </string>
    <string name="pick_your_language">Pick Your <font color="#0C83FF">Language</font></string>
    <string name="ads_free">Ads Free</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="change_language">Change Language</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="sharing_support"><![CDATA[Sharing & Support]]></string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="more_apps">More Apps</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="UNABLE_TO_FIND_MARKET_APP">unable to find market app</string>
    <string name="share_app_message">Let me recommend you this application Air printer\n</string>
    <string name="get_premium_access_for_free">Get Premium access for free</string>
    <string name="_3_days_trail_then_200_week">3 days trail then 200/week</string>
    <string name="try_for_free">Try for free</string>
    <string name="get_a_special_offer">Get a Special Offer</string>
    <string name="ad_tx">Enjoy uninterrupted, ad-free browsing\nwith our premium package</string>
    <string name="ad_s_free_experience">Ad’s free Experience</string>
    <string name="one_time_purchase">One Time Purchase</string>
    <string name="monthly">Monthly</string>
    <string name="pkr_1000_00">Pkr 1000.00</string>
    <string name="weekly">Weekly</string>
    <string name="life_time">Life Time</string>
    <string name="purchase">Purchase</string>
    <string name="privacy_policy_1"><u>Privacy Policy</u></string>
    <string name="term_of_user"><u>Term of User</u></string>
    <string name="purchase_success_message">Purchase success</string>
    <string name="security_issue_not_valid">Security Issue\n</string>
    <string name="buy_pro">Buy Pro</string>
    <string name="watch_video">Watch Video</string>
    <string name="unlock_access">Unlock Access</string>
    <string name="sub_text_view">To access specific features watch video or by\npremium plan</string>
    <string name="internet_toast">Please check your internet connection</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="do_you_want_to_exit_an_app">Do you want to exit an app?</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="thanks_for_using_our_app">Thanks for using our app</string>
    <string name="tv_subs">We would be very grateful is you can rate us</string>
    <string name="the_best_rating_for_us">The best rating for us :)</string>
    <string name="thanks_for_your_feedback">Thanks for your feedback</string>
</resources>