<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    tools:context=".ui.fragments.HelpFirstFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/firstVector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/help_first_vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mainTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/check_first"
        android:textColor="@color/find_printer_color"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="@+id/firstVector"
        app:layout_constraintStart_toStartOf="@+id/firstVector"
        app:layout_constraintTop_toBottomOf="@+id/firstVector" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/firstTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:lineSpacingExtra="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/tv_help_first"
        android:textColor="@color/find_printer_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTv" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/firstSubTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/global_settings"
        android:textColor="@color/searching_sub_text_color"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstTv" />


    <View
        android:id="@+id/viewGlobal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginHorizontal="@dimen/_2sdp"
        app:layout_constraintTop_toBottomOf="@+id/firstSubTv"
        android:background="@drawable/bg_global_setting"/>

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/wifiIv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/wifi_icon"
          app:layout_constraintTop_toTopOf="@+id/viewGlobal"
          app:layout_constraintBottom_toBottomOf="@+id/viewGlobal"
          android:layout_marginStart="@dimen/_10sdp"
          app:layout_constraintStart_toStartOf="@+id/viewGlobal"/>



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/wifiTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/wi_fi"
        android:textColor="@color/find_printer_color"
        android:textSize="@dimen/_14ssp"
        android:layout_marginStart="@dimen/_10sdp"
         app:layout_constraintStart_toEndOf="@+id/wifiIv"
        app:layout_constraintTop_toTopOf="@+id/wifiIv"
        app:layout_constraintTop_toBottomOf="@+id/wifiIv" />


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_16sdp"
        android:src="@drawable/switch_ic"
        app:layout_constraintTop_toTopOf="@+id/viewGlobal"
        app:layout_constraintBottom_toBottomOf="@+id/viewGlobal"
          android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@+id/viewGlobal"/>



</androidx.constraintlayout.widget.ConstraintLayout>