<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color"
    tools:context=".ui.activity.SettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backBtn"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:foreground="@drawable/card_ripple_effect"
                android:padding="@dimen/_7sdp"
                android:src="@drawable/back_ic"
               app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/settingTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/settings"
                android:textColor="@color/find_printer_color"
                android:textSize="@dimen/_16ssp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintStart_toEndOf="@+id/backBtn"
                app:layout_constraintTop_toTopOf="parent" />




            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/proBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_92sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/pro_card"

                android:foreground="@drawable/card_ripple_effect"
                app:layout_constraintTop_toBottomOf="@+id/settingTv">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/getPremium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/get_premium_access_for_free"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:maxEms="19"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/freeTrail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/_3_days_trail_then_200_week"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/getPremium"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_15sdp"
                    app:strokeWidth="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/freeTrail">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/inter_semi_bold"
                        android:text="@string/try_for_free"
                       android:gravity="center"
                        android:maxEms="5"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:layout_marginHorizontal="@dimen/_3sdp"
                        android:textColor="@color/blue_color"
                        android:textSize="@dimen/_12ssp" />


                </com.google.android.material.card.MaterialCardView>



            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/generalTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/general"
                android:layout_marginStart="@dimen/_3sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/searching_sub_text_color"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@+id/proBtn" />

            <View
                android:id="@+id/pagePerSheet"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@drawable/all_in_one_card"
                app:layout_constraintTop_toBottomOf="@+id/generalTv" />



            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/changeLanguageIv"
                android:layout_width="@dimen/_14sdp"
                android:layout_height="@dimen/_14sdp"

                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/change_language_icon"
                app:layout_constraintStart_toStartOf="@+id/pagePerSheet"
                app:layout_constraintBottom_toTopOf="@+id/lineView1"
                app:layout_constraintTop_toTopOf="@+id/pagePerSheet"/>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/wifiTv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/change_language"
                android:textColor="@color/find_printer_color"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@+id/changeLanguageIv"
                app:layout_constraintBottom_toTopOf="@+id/lineView1"
                app:layout_constraintTop_toTopOf="@+id/pagePerSheet" />





            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView2"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:src="@drawable/next_errow"
                android:padding="@dimen/_8sdp"
                android:foreground="@drawable/card_ripple_effect"
                app:layout_constraintBottom_toTopOf="@+id/lineView1"
                app:layout_constraintEnd_toEndOf="@+id/pagePerSheet"
                app:layout_constraintTop_toTopOf="@+id/pagePerSheet" />



            <View
                android:id="@+id/lineView1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                app:layout_constraintTop_toTopOf="@+id/pagePerSheet"
                app:layout_constraintBottom_toBottomOf="@+id/pagePerSheet"/>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/changeThemeIv"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/theme_change_icon"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="@+id/pagePerSheet"
                app:layout_constraintBottom_toBottomOf="@+id/pagePerSheet"
                app:layout_constraintTop_toBottomOf="@+id/lineView1"/>


            <com.google.android.material.textview.MaterialTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/dark_theme"
                android:textColor="@color/find_printer_color"
                android:textSize="@dimen/_14ssp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@+id/changeThemeIv"
                app:layout_constraintBottom_toBottomOf="@+id/pagePerSheet"
                app:layout_constraintTop_toBottomOf="@+id/lineView1" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:checked="false"
                android:theme="@style/AppTheme_switch"
                app:track="@drawable/switch_track"
                android:thumb="@drawable/switch_thumb"
                app:layout_constraintBottom_toBottomOf="@+id/pagePerSheet"
                app:layout_constraintEnd_toEndOf="@+id/pagePerSheet"
                app:layout_constraintTop_toBottomOf="@+id/lineView1"/>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/sharing_support"
                android:layout_marginStart="@dimen/_3sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/searching_sub_text_color"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@+id/pagePerSheet" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@+id/sTv"
                android:paddingVertical="@dimen/_5sdp"
                android:background="@drawable/all_in_one_card">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/rateUs"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/rate_app"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/find_printer_color"
                    android:foreground="@drawable/card_ripple_effect"
                    android:drawableLeft="@drawable/rate_app"
                    android:drawablePadding="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/shareApp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/share_app"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/find_printer_color"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:foreground="@drawable/card_ripple_effect"
                    android:drawableLeft="@drawable/share_app"
                    android:drawablePadding="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/rateUs"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/moreApps"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/more_apps"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/find_printer_color"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:foreground="@drawable/card_ripple_effect"
                    android:drawableLeft="@drawable/more_apps"
                    android:drawablePadding="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/shareApp"
                    app:layout_constraintStart_toStartOf="parent"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/pPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/privacy_policy"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/find_printer_color"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:foreground="@drawable/card_ripple_effect"
                    android:drawableLeft="@drawable/p_p"
                    android:drawablePadding="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/moreApps"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>